force-app/main/default/objects/Agent_Assist_Config__c/Agent_Assist_Config__c.object-meta.xml
<CustomObject>
    <description>Stores configuration profiles managed by the Agent Assist Setup Wizard.</description>
    <label>Agent Assist Config</label>
    <nameField>
        <label>Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Assist Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>