force-app/main/default/objects/Agent_Assist_Config__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description
  >The type of conversation channel, either chat or voice.</description>
    <inlineHelpText
  >The type of conversation channel (chat or voice).</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>chat</fullName>
                <default>true</default>
                <label>chat</label>
            </value>
            <value>
                <fullName>voice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>