force-app/main/default/objects/Agent_Assist_Config__c/fields/Client_Credentials_User__c.field-meta.xml
<CustomField>
    <fullName>Client_Credentials_User__c</fullName>
    <description
  >The Salesforce username or execution user for the OAuth 2.0 Client Credentials flow.</description>
    <inlineHelpText
  >Salesforce execution user for OAuth Client Credentials flow.</inlineHelpText>
    <label>Client Credentials User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>