force-app/main/default/objects/Agent_Assist_Config__c/fields/Consumer_Key__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Key__c</fullName>
    <description>The Consumer Key from your Salesforce Connected App for authentication.</description>
    <inlineHelpText>Connected App Consumer Key.</inlineHelpText>
    <label>Consumer Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>