force-app/main/default/objects/Agent_Assist_Config__c/fields/Consumer_Secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Secret__c</fullName>
    <description
  >The Consumer Secret from your Salesforce External Client App for authentication.</description>
    <inlineHelpText>External Client App Consumer Secret.</inlineHelpText>
    <label>Consumer Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>