force-app/main/default/objects/Agent_Assist_Config__c/fields/Container_Height__c.field-meta.xml
<CustomField>
    <fullName>Container_Height__c</fullName>
    <defaultValue>"530px"</defaultValue>
    <description
  >The height of the Agent Assist container (e.g. 530px).</description>
    <inlineHelpText>Height in pixels (e.g. 530px).</inlineHelpText>
    <label>Container Height</label>
    <length>50</length>
    <type>Text</type>
</CustomField>