force-app/main/default/objects/Agent_Assist_Config__c/fields/Conversation_Profile__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Profile__c</fullName>
    <description
  >The full resource name of the Google Cloud Conversation Profile.</description>
    <inlineHelpText
  >e.g. projects/{project-id}/locations/{location-id}/conversationProfiles/{profile-id}</inlineHelpText>
    <label>Conversation Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>