force-app/main/default/objects/Agent_Assist_Config__c/fields/Debug_Mode__c.field-meta.xml
<CustomField>
    <fullName>Debug_Mode__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable debug logging to the browser console.</description>
    <inlineHelpText>Enable debug logging in browser console.</inlineHelpText>
    <label>Debug Mode</label>
    <type>Checkbox</type>
</CustomField>