force-app/main/default/objects/Agent_Assist_Config__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <description
  >Unique API Developer Name for this configuration profile (e.g. Default, Case_Config, Contact_Config).</description>
    <externalId>true</externalId>
    <inlineHelpText
  >Matches the configName property in agentAssistContainer XML or App Builder.</inlineHelpText>
    <label>Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>