force-app/main/default/objects/Agent_Assist_Config__c/fields/Disable_Integrated_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Disable_Integrated_Transcript__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Disable the integrated transcript UI module inside the container, encouraging use of the standalone transcript LWC.</description>
    <inlineHelpText>Disable integrated transcript in container</inlineHelpText>
    <label>Disable Integrated Transcript</label>
    <type>Checkbox</type>
</CustomField>