force-app/main/default/objects/Agent_Assist_Config__c/fields/Disabled_Features__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Features__c</fullName>
    <description
  >Comma-separated list of features to disable in the UI Modules.</description>
    <inlineHelpText>e.g. smart-reply,knowledge-search</inlineHelpText>
    <label>Disabled Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>