force-app/main/default/objects/Agent_Assist_Config__c/fields/Enable_Auto_Assist__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_Assist__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Controls whether background automated assist is enabled.</description>
    <label>Enable Auto Assist</label>
    <type>Checkbox</type>
</CustomField>