force-app/main/default/objects/Agent_Assist_Config__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description
  >API endpoint URL for the Agent Assist backend service.</description>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>