force-app/main/default/objects/Agent_Assist_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Flag indicating if this configuration profile is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>