force-app/main/default/objects/Agent_Assist_Config__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <description
  >The platform integration type (e.g., base, messaging, twilioflex, servicecloudvoice-nice, servicecloudvoice-byot-five9).</description>
    <inlineHelpText
  >The platform integration type (Base Platform works OOTB without CX config).</inlineHelpText>
    <label>Platform Integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>base</fullName>
                <default>true</default>
                <label>Base Platform (Direct API Connector)</label>
            </value>
            <value>
                <fullName>messaging</fullName>
                <label>Salesforce Enhanced Chat</label>
            </value>
            <value>
                <fullName>twilioflex</fullName>
                <label>Twilio Flex</label>
            </value>
            <value>
                <fullName>servicecloudvoice-nice</fullName>
                <label>Service Cloud Voice (NICE)</label>
            </value>
            <value>
                <fullName>servicecloudvoice-byot-five9</fullName>
                <label>Service Cloud Voice (BYOT Five9)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>