force-app/main/default/objects/Agent_Assist_Config__c/fields/Show_Correctness_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Show_Correctness_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable correctness feedback in the UI Module.</description>
    <inlineHelpText>Show correctness feedback thumbs up/down.</inlineHelpText>
    <label>Show Correctness Feedback</label>
    <type>Checkbox</type>
</CustomField>