force-app/main/default/objects/Agent_Assist_Config__c/fields/Show_Dark_Mode_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Show_Dark_Mode_Toggle__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the dark mode toggle in the UI Module.</description>
    <inlineHelpText>Show dark mode toggle button.</inlineHelpText>
    <label>Show Dark Mode Toggle</label>
    <type>Checkbox</type>
</CustomField>