force-app/main/default/objects/Agent_Assist_Config__c/fields/Show_Header__c.field-meta.xml
<CustomField>
    <fullName>Show_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable the header in the UI Module.</description>
    <inlineHelpText>Show header in UI Module container.</inlineHelpText>
    <label>Show Header</label>
    <type>Checkbox</type>
</CustomField>