force-app/main/default/objects/Agent_Assist_Config__c/fields/Show_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Show_Suggestions__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether real-time recommendation cards are displayed in the container.</description>
    <label>Show Suggestions</label>
    <type>Checkbox</type>
</CustomField>