force-app/main/default/objects/Agent_Assist_Config__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>Target Salesforce Object API Name for this profile (e.g. Contact, Case, MessagingSession, or Global/Utility).</description>
    <label>Target Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>