force-app/main/default/objects/Agent_Assist_Config__c/fields/Welcome_Message__c.field-meta.xml
<CustomField>
    <!--
     Copyright 2026 Google LLC

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
    -->

    <fullName>Welcome_Message__c</fullName>
    <description
  >Initial greeting and instructions displayed to the agent in the Companion Agent UI.</description>
    <label>Welcome Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>